--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/catanineto/PriceScrapper#readme",
   "dependencies": {
-    "puppeteer": "^7.1.0",
-    "http-server": "^0.12.3"
+    "express": "^4.17.1",
+    "puppeteer": "^7.1.0"
   }
 }
